Commando: Fixed showing scrollbar when none is needed
rn=

(integrated from master branch change 316cbf0 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/scrollbars.less
+++ b/src/chrome/komodo/skin/plat/shared/scrollbars.less
@@ -94,3 +94,11 @@ page scrollbar:not([for="scintilla"])
     }
 }
 page:hover scrollbar:not([for="scintilla"]) { opacity: 1.0; }
+
+/* Mainly intended for commando result richlistbox, where we need to force
+   scrollbar visibility manually because XUL flex and scrolling do not go well
+   together */
+richlistbox:not(.scrollable) scrollbar
+{
+    visibility: collapse;
+}
